--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/styled-components-react-native": "^5.2.5",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "styled-components": "^6.1.8"
+    "react-native-linear-gradient": "^2.8.3",
+    "styled-components": "^6.1.8",
+    "expo-linear-gradient": "~12.7.2",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
