--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "react-native": "0.73.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^15.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "react-native-svg-transformer": "^1.3.0",
     "typescript": "^5.1.3"
   },
   "private": true
